--- a/pages/header/header.css
+++ b/pages/header/header.css
@@ -2,7 +2,8 @@
     font-family: RobotoRegular;
     src: url(../fonts/Roboto-Regular.woff);
   }
-  body {
-    font-family: RobotoRegular, sans-serif !important;
-    font-size: 14px !important;
+  
+
+  .search-icon{
+    font-size: 1.2rem;
   }
