--- a/pages/mycafila/mycafila.css
+++ b/pages/mycafila/mycafila.css
@@ -45,7 +45,7 @@ body {
 }
 
 .list-group-item:hover {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(40,181,244,.5);
   color: white;
 }
 .mycafila-chat #action_menu_btn {
@@ -59,6 +59,19 @@ body {
 .create-mycafila .cafila-search {
   margin-top: 15px;
 }
+
+.cafila-search .list-group-item{
+  padding: 7px 7px;
+
+}
+
+.cafila-search .list-group-item .trash{
+  cursor: pointer;
+
+}
+
+
+
 .create-mycafila .modal-footer .btn-primary{
   background-color: #039be5;
   border-color: #039be5;
