--- a/pages/recommendation/recommendation.css
+++ b/pages/recommendation/recommendation.css
@@ -13,109 +13,107 @@ body {
 }
 
 @font-face {
-    font-family: RobotoRegular;
-    src: url(../..//fonts/Roboto-Regular.woff);
-  }
-  @font-face {
-    font-family: RobotoBold;
-    src: url(../../fonts/Roboto-Bold.woff);
-  }
-  .text {
-    text-align: center;
-  }
-  @font-face {
-    font-family: RobotoLight;
-    src: url(../../fonts/Roboto-Light.woff);
-  }
-  @font-face {
-    font-family: RobotoMedium;
-    src: url(../../fonts/Roboto-Medium.woff);
-  }
+  font-family: RobotoRegular;
+  src: url(../..//fonts/Roboto-Regular.woff);
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
+.text {
+  text-align: center;
+}
+@font-face {
+  font-family: RobotoLight;
+  src: url(../../fonts/Roboto-Light.woff);
+}
+@font-face {
+  font-family: RobotoMedium;
+  src: url(../../fonts/Roboto-Medium.woff);
+}
 
 .message-box {
-margin-top: 25%;
+  margin-top: 25%;
 }
-.message{
-    min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));    
-}
-.content-box{
-    width: 100%;
-    background-color: rgba(255,101,101,.5);
-    text-align: center;
-    color: white;
-    font-family: 'RobotoRegular';
-}
-.message-box h3{
-    font-size: 4rem;
-    color: white;
-    font-family: ' MontserratBlack;';
-    display: block;
+.message {
+  min-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
 }
 
-.message-box p{
-    font-family: 'MontserratBlack';
-    color: white;
-    /* font-size: 2rem; */
-    font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
-    
+.content-box {
+  width: 100%;
+  background-color: rgba(255, 101, 101, 0.5);
+  text-align: center;
+  color: white;
+  font-family: "RobotoRegular";
+}
+.message-box h3 {
+  font-size: 4rem;
+  color: white;
+  font-family: " MontserratBlack;";
+  display: block;
 }
 
-.user-profiles{
-    max-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));    
-    overflow-y: auto;
+.message-box p {
+  font-family: "MontserratBlack";
+  color: white;
+  /* font-size: 2rem; */
+  font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
 }
 
-.done-btn{
-    padding: 0;
-    margin: 4.063vw 0 0;
-    float: left;
-    line-height: 2.5vw;
-    text-align: center;
-    background: #8ce3ef !important;
-    border-radius: 24px !important;
-    text-decoration: underline;
-    box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
-    color: #fff;
-    font-size: calc(1rem + ((1vw - 13.6px) * .8929));
-    font-family: 'RobotoRegular';
-    cursor: pointer;
-    width: 7.51vw;
+.user-profiles {
+  max-height: calc(100vh - calc(3.5rem + 1px) - calc(3.5rem + 1px));
+  overflow-y: auto;
 }
 
-.content-box{
+.done-btn {
+  padding: 0;
+  margin: 4.063vw 0 0;
+  float: left;
+  line-height: 2.5vw;
+  text-align: center;
+  background: #8ce3ef !important;
+  border-radius: 24px !important;
+  text-decoration: underline;
+  box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
+  color: #fff;
+  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
+  font-family: "RobotoRegular";
+  cursor: pointer;
+  width: 7.51vw;
+}
+
+.content-box {
   margin-top: -35%;
 }
 @media only screen and (max-width: 600px) {
-    .message-box {
-        margin-top: 0;
-        }
-        .message-box h3{
-            font-size: 4rem;
-        }
+  .message-box {
+    margin-top: 0;
   }
-  
-  @media only screen and (max-width: 600px) {
-    .message-box p{
-     font-size: 100%;
-    }
+  .message-box h3 {
+    font-size: 4rem;
   }
+}
 
-  @media only screen and (max-width: 600px){
-    .done-btn{
-      width: 30%;
-      box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
-    }
+@media only screen and (max-width: 600px) {
+  .message-box p {
+    font-size: 100%;
   }
+}
 
-  @media only screen and (max-width: 600px){
-    .user-profiles{
-      margin-top: -91%;
-    }
+@media only screen and (max-width: 600px) {
+  .done-btn {
+    width: 30%;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
   }
-  @media only  screen and (max-width:600px) {
-      .sscontentbox{
-        margin-top: -19%;
-      }   
+}
+
+@media only screen and (max-width: 600px) {
+  .user-profiles {
+    margin-top: -91%;
   }
-
-
+}
+@media only screen and (max-width: 600px) {
+  .sscontentbox {
+    margin-top: -19%;
+  }
+}
