--- a/pages/chat/chat.css
+++ b/pages/chat/chat.css
@@ -195,7 +195,6 @@ body {
   position: relative;
   height: 60px;
   width: 60px;
-  left: 10px;
 }
 .img_cont_msg {
   height: 40px;
@@ -257,32 +256,33 @@ body {
   margin-right: 10px;
   border-radius: 25px;
   background-color:#d7d7d7;
-  padding: 10px;
+  padding: 12px;
   position: relative;
 }
 .msg_time {
   position: absolute;
   left: 0;
-  bottom: -15px;
+  bottom: -20px;
   /* color: rgba(255, 255, 255, 0.5); */
-  font-size: 10px;
+  font-size: 12px;
 }
 .msg_time_send {
   position: absolute;
   right: 0;
-  bottom: -15px;
+  bottom: -20px;
   /* color: rgba(255, 255, 255, 0.5); */
-  font-size: 10px;
+  font-size: 12px;
 }
 .msg_head {
   position: relative;
 }
 #action_menu_btn {
-  position: absolute;
-  left: 7px;
-  top: 20px;
-  cursor: pointer;
-  font-size: 20px;
+    justify-content: center;
+    cursor: pointer;
+    align-items: center;
+    font-size: 20px;
+    display: none;
+    padding-right: 10px;
 }
 .action_menu {
   z-index: 1;
@@ -325,8 +325,15 @@ body {
   .contacts_card {
     margin-bottom: 15px !important;
   }
+  .wrapper .content{
+  margin-left: 0;
+}
 }
 @media (max-width: 767px) {
+  #action_menu_btn {
+    display: flex;
+    
+}
   .msgsection.chat {
     margin-top: 20px;
   }
