--- a/pages/dashboardListUser/dashboardListUser.css
+++ b/pages/dashboardListUser/dashboardListUser.css
@@ -13,7 +13,49 @@
     font-size: 1.5rem;
     color: #d7d7d7;
   }
-  
+  .flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    
+    -ms-box-orient: horizontal;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: flex;
+  }
+  .profile-img{
+    padding: 5px;
+    margin: 5px;
+  }
+  .profile-details{
+    width: 12%;
+    padding: 5px;
+    margin: 5px;
+  }
+
+  .action-item{
+    padding: 5px;
+    margin: 5px;
+    width: 100px;
+    text-align: center;
+  }
+
+  .flex-item {
+    background: tomato;
+    padding: 5px;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
+    
+    line-height: 50px;
+    color: white;
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+  }
   
   .form-control-borderless {
     border: none;
@@ -178,7 +220,9 @@
   }
   
   @media (max-width: 576px) {
- 
+    .container-fluid{
+      min-height: 40rem;
+    }
     .wrapper .content{
     margin-left: 0;
   }
