--- a/pages/dashboardListUser/dashboardListUser.css
+++ b/pages/dashboardListUser/dashboardListUser.css
@@ -1,247 +1,208 @@
 @font-face {
-    font-family: RobotoRegular;
-    src: url(../fonts/Roboto-Regular.woff);
-  }
-  
-  
-  @font-face {
-    font-family: RobotoBold;
-    src: url(../../fonts/Roboto-Bold.woff);
-  }
-  
-  .search-icon{
-    font-size: 1.5rem;
-    color: #d7d7d7;
-  }
-  .flex-container {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    
-    -ms-box-orient: horizontal;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: flex;
-  }
-  .profile-img{
-    padding: 5px;
-    margin: 5px;
-  }
-  .profile-details{
-    width: 12%;
-    padding: 5px;
-    margin: 5px;
-  }
+  font-family: RobotoRegular;
+  src: url(../fonts/Roboto-Regular.woff);
+}
 
-  .action-item{
-    padding: 5px;
-    margin: 5px;
-    width: 100px;
-    text-align: center;
-  }
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
 
-  .flex-item {
-    background: tomato;
-    padding: 5px;
-    width: 50px;
-    height: 50px;
-    margin: 5px;
-    
-    line-height: 50px;
-    color: white;
-    font-weight: bold;
-    font-size: 2em;
-    text-align: center;
-  }
-  
-  .form-control-borderless {
-    border: none;
-  }
-  
-  .form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
-    border: none;
-    outline: none;
-    box-shadow: none;
-  }
-  
-  .user-list-panel{
-    border-right: 1px solid #f1f1f3;
-    
-  }
-  .chat-card-header{
-    padding: 0rem 1.5rem;
-  }
-  
-  .search-box{
-    padding-top: 1rem;
-    font-family: 'RobotoRegular';
-    border-bottom: 1px solid #28b5f4;
-  }
-  .inboxUl li{
-    cursor: pointer;
-  }
-  
-  .inboxMenu h4{
-    color: #707070;
-    font-family: 'RobotoBold';
-  }
-  
-  .inboxUl li:hover{
-    background: rgba(40, 181, 244, 0.5);
-    border-left: 0.41667vw solid #28b5f4;
-    color: #fff;
-    border-radius: 0 5px 5px 0;
-  }
-  
-  .content-wrapper{
-    background-color: none  !important;
-  }
-  
-  
-  
-  
-  
-  
-  .user-list li{
+
+.search-icon {
+  font-size: 1.5rem;
+  color: #d7d7d7;
+}
+
+.action-item {
+  padding: 5px;
+  margin: 5px;
+  width: 100px;
+  text-align: center;
+}
+
+
+
+.form-control-borderless {
+  border: none;
+}
+
+.form-control-borderless:hover,
+.form-control-borderless:active,
+.form-control-borderless:focus {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+.user-list-panel {
+  border-right: 1px solid #f1f1f3;
+}
+.chat-card-header {
+  padding: 0rem 1.5rem;
+}
+
+.search-box {
+  padding-top: 1rem;
+  font-family: "RobotoRegular";
+  border-bottom: 1px solid #28b5f4;
+}
+.inboxUl li {
+  cursor: pointer;
+}
+
+.inboxMenu h4 {
+  color: #707070;
+  font-family: "RobotoBold";
+}
+
+.inboxUl li:hover {
+  background: rgba(40, 181, 244, 0.5);
+  border-left: 0.41667vw solid #28b5f4;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+}
+
+.content-wrapper {
+  background-color: none !important;
+}
+
+.user-list li {
   list-style-type: none;
-  }
-  .user-list{
-    padding: 0;
-    height: 47.604166666666664vw;
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
-  
-  .user-tab{
-    width: 100%;
-    color: #616161;
-    margin: 5px 1px 10px 0px;
-    border: 1px solid #28b5f4;
-    cursor: pointer;
-    border-radius: 5px;
-    min-height: 4rem;
-  }
-  
-  .user-tab .profile-desc{
-  font-family: 'RobotoRegular';
-  width : 100%;
-  overflow:hidden;
-  display:inline-block;
+}
+.user-list {
+  padding: 0;
+  height: 47.604166666666664vw;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.user-tab {
+  width: 100%;
+  color: #616161;
+  margin: 5px 1px 10px 0px;
+  border: 1px solid #28b5f4;
+  cursor: pointer;
+  border-radius: 5px;
+  min-height: 4rem;
+}
+
+.user-tab .profile-desc {
+  font-family: "RobotoRegular";
+  width: 100%;
+  overflow: hidden;
+  display: inline-block;
   text-overflow: ellipsis;
   white-space: nowrap;
-  
+}
+.user-list .selected {
+  border-left: 0.2rem solid #616161;
+  box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
+}
+.user-tab .profile-name {
+  font-family: "RobotoBold";
+}
+.user-tab:hover {
+  box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
+}
+
+body {
+  font-family: RobotoRegular, sans-serif !important;
+  font-size: 14px !important;
+}
+.chat {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.card {
+  height: 650px;
+}
+.contacts_body {
+  padding: 0.75rem 0 !important;
+  overflow-y: auto;
+  white-space: nowrap;
+}
+.msg_card_body {
+  overflow-y: auto;
+}
+.card-header {
+  border-radius: 15px 15px 0 0 !important;
+}
+.card-footer {
+  border-radius: 0 0 15px 15px !important;
+  border-top: 0 !important;
+}
+.container {
+  align-content: center;
+}
+.search {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+}
+.search:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+.type_msg {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  height: 60px !important;
+  overflow-y: auto;
+}
+.type_msg:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+.attach_btn {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+.send_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+.search_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+@media (max-width: 576px) {
+  .container-fluid {
+    min-height: 40rem;
   }
-  .user-list .selected{
-    border-left: 0.2rem solid  #616161;
-    box-shadow: 0 6px 12px rgb(0 0 0 / 16%)
-  }
-  .user-tab .profile-name{
-    font-family: 'RobotoBold';
-  }
-  .user-tab:hover{
-    box-shadow: 0 6px 12px rgb(0 0 0 / 16%)
-  }
-  
-  
-  
-  body {
-    font-family: RobotoRegular, sans-serif !important;
-    font-size: 14px !important;
-  }
-  .chat {
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-  .card {
-    height: 650px;
-  }
-  .contacts_body {
-    padding: 0.75rem 0 !important;
-    overflow-y: auto;
-    white-space: nowrap;
-  }
-  .msg_card_body {
-    overflow-y: auto;
-  }
-  .card-header {
-    border-radius: 15px 15px 0 0 !important;
-  }
-  .card-footer {
-    border-radius: 0 0 15px 15px !important;
-    border-top: 0 !important;
-  }
-  .container {
-    align-content: center;
-  }
-  .search {
-    border-radius: 15px 0 0 15px !important;
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    border: 0 !important;
-    color: white !important;
-  }
-  .search:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-  }
-  .type_msg {
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    border: 0 !important;
-    color: white !important;
-    height: 60px !important;
-    overflow-y: auto;
-  }
-  .type_msg:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-  }
-  .attach_btn {
-    border-radius: 15px 0 0 15px !important;
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    border: 0 !important;
-    color: white !important;
-    cursor: pointer;
-  }
-  .send_btn {
-    border-radius: 0 15px 15px 0 !important;
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    border: 0 !important;
-    color: white !important;
-    cursor: pointer;
-  }
-  .search_btn {
-    border-radius: 0 15px 15px 0 !important;
-    background-color: rgba(0, 0, 0, 0.3) !important;
-    border: 0 !important;
-    color: white !important;
-    cursor: pointer;
-  }
-  
-  @media (max-width: 576px) {
-    .container-fluid{
-      min-height: 40rem;
-    }
-    .wrapper .content{
+  .wrapper .content {
     margin-left: 0;
+    border-radius: 0;
   }
-  .user-list{
+  .user-list {
     height: auto;
   }
-  .user-list-panel{
-      height: auto;
+  .user-list-panel {
+    height: auto;
   }
-  .profile-image img{
+  .profile-image img {
     width: 15%;
   }
 
   .user-tab {
     margin: 5px 1px 10px 0px;
-    
+
     border: 1px solid #28b5f4;
- 
   }
+
+
   @media (max-width: 767px) {
     .msgsection.chat {
       margin-top: 20px;
@@ -251,6 +212,7 @@
     }
     .ppl {
       padding: 15px 0 10px 10px;
+    }
   }
   @media (min-width: 768px) {
     .msgsection.chat .msg_head .fa-arrow-left {
@@ -258,8 +220,8 @@
     }
   }
 }
-  @media (max-width: 767px) {
-    .ppl {
-      padding: 15px 0 10px 10px;
-    }
+@media (max-width: 767px) {
+  .ppl {
+    padding: 15px 0 10px 10px;
   }
+}
