--- a/pages/chat/chat.css
+++ b/pages/chat/chat.css
@@ -1,104 +1,19 @@
-@font-face {
-  font-family: RobotoRegular;
-  src: url(../fonts/Roboto-Regular.woff);
-}
-
-
-@font-face {
-  font-family: RobotoBold;
-  src: url(../../fonts/Roboto-Bold.woff);
-}
-
-.search-icon{
-  font-size: 1.5rem;
-  color: #d7d7d7;
-}
-
-
-.form-control-borderless {
-  border: none;
-}
-
-.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
-  border: none;
-  outline: none;
-  box-shadow: none;
-}
-
-.user-list-panel{
-  border-right: 1px solid #f1f1f3;
-  height: 47.604166666666664vw;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
-.chat-card-header{
+.chat-card-header {
   padding: 0rem 1.5rem;
 }
 
-.search-box{
-  padding-top: 1rem;
-  font-family: 'RobotoRegular';
-}
-.inboxUl li{
+.inboxUl li {
   cursor: pointer;
 }
 
-.inboxMenu h4{
+.inboxMenu h4 {
   color: #707070;
-  font-family: 'RobotoBold';
+  font-family: "RobotoBold";
 }
 
-.inboxUl li:hover{
-  background: rgba(40, 181, 244, 0.5);
-  border-left: 0.41667vw solid #28b5f4;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
+.content-wrapper {
+  background-color: none !important;
 }
-
-.content-wrapper{
-  background-color: none  !important;
-}
-
-
-
-
-
-
-.user-list li{
-list-style-type: none;
-}
-.user-list{
-  padding: 0;
-}
-
-.user-tab{
-  width: 100%;
-  color: #616161;
-  margin: 5px 1px 10px 1px;
-  cursor: pointer;
-}
-
-.user-tab .profile-desc{
-font-family: 'RobotoRegular';
-width : 100%;
-overflow:hidden;
-display:inline-block;
-text-overflow: ellipsis;
-white-space: nowrap;
-
-}
-.user-list .selected{
-  border-left: 0.2rem solid  #616161;
-  box-shadow: 0 6px 12px rgb(0 0 0 / 16%)
-}
-.user-tab .profile-name{
-  font-family: 'RobotoBold';
-}
-.user-tab:hover{
-  box-shadow: 0 6px 12px rgb(0 0 0 / 16%)
-}
-
-
 
 body {
   font-family: RobotoRegular, sans-serif !important;
@@ -203,7 +118,7 @@ body {
 .ppl {
   padding: 15px 0 0 10px;
 }
-.ppl:hover{
+.ppl:hover {
   box-shadow: 0 6px 12px rgb(0 0 0 / 16%);
 }
 .online_icon {
@@ -246,7 +161,7 @@ body {
   margin-bottom: auto;
   margin-left: 10px;
   border-radius: 25px;
-  background-color:#28b5f4;
+  background-color: #28b5f4;
   padding: 10px;
   position: relative;
 }
@@ -255,7 +170,7 @@ body {
   margin-bottom: auto;
   margin-right: 10px;
   border-radius: 25px;
-  background-color:#d7d7d7;
+  background-color: #d7d7d7;
   padding: 12px;
   position: relative;
 }
@@ -277,12 +192,12 @@ body {
   position: relative;
 }
 #action_menu_btn {
-    justify-content: center;
-    cursor: pointer;
-    align-items: center;
-    font-size: 20px;
-    display: none;
-    padding-right: 10px;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+  font-size: 20px;
+  display: none;
+  padding-right: 10px;
 }
 .action_menu {
   z-index: 1;
@@ -290,8 +205,8 @@ body {
   padding: 15px 0;
   background-color: #fff;
   border-radius: 15px;
-  top: 30px;
-  right: 20px;
+  top: 50px;
+  right: 5px;
   box-shadow: 0 2px 10px rgb(0 0 0 / 15%);
   display: none;
 }
@@ -318,22 +233,19 @@ body {
 .msgsection.chat .type_msg {
   line-height: 44px;
 }
-.msgsection.chat .msg_cotainer_send, .msgsection.chat .msg_cotainer {
+.msgsection.chat .msg_cotainer_send,
+.msgsection.chat .msg_cotainer {
   font-size: 14px;
 }
 @media (max-width: 576px) {
   .contacts_card {
     margin-bottom: 15px !important;
   }
-  .wrapper .content{
-  margin-left: 0;
-}
 }
 @media (max-width: 767px) {
   #action_menu_btn {
     display: flex;
-    
-}
+  }
   .msgsection.chat {
     margin-top: 20px;
   }
@@ -342,6 +254,7 @@ body {
   }
   .ppl {
     padding: 15px 0 10px 10px;
+  }
 }
 @media (min-width: 768px) {
   .msgsection.chat .msg_head .fa-arrow-left {
