--- a/pages/dashboardListUser/dashboardListUser.css
+++ b/pages/dashboardListUser/dashboardListUser.css
@@ -183,8 +183,8 @@ body {
     min-height: 40rem;
   }
   .wrapper .content {
-    margin-left: 0;
-    border-radius: 0;
+    margin-left: 0 !important;
+    border-radius: 0 !important;
   }
   .user-list {
     height: auto;
