--- a/pages/commonModel/commonModel.css
+++ b/pages/commonModel/commonModel.css
@@ -22,7 +22,15 @@
   cursor: pointer;
 }
 
-.model-image-viewer .close-icon i{
+.profile-modal textarea {
+  resize: none;
+  color: #000;
+  background: #efefef;
+  border: 0;
+  border-radius: 5px;
+}
+
+.model-image-viewer .close-icon i {
   background: white;
   border-radius: 50%;
 }
