--- a/pages/landingPage/landingPage.css
+++ b/pages/landingPage/landingPage.css
@@ -13,6 +13,154 @@
   margin-left: -296%;
 }
 
+.community-info {
+  background-color: white;
+}
+
+.wrapper {
+  background-color: white;
+}
+.landing-navbar {
+  z-index: 265;
+  box-shadow: 0 -1px 9px #666;
+}
+
+html * {
+  -webkit-font-smoothing: antialiased;
+}
+
+h3 {
+  font-weight: 300 !important;
+  font-size: 25px !important;
+}
+
+footer {
+  margin-top: 100px;
+  color: #555;
+  background: #fff;
+  padding: 25px;
+  font-weight: 300;
+}
+.community-title {
+  font-family: "RobotoRegular";
+  font-size: 1.6rem;
+}
+
+/* .card.card-carousel {
+  border: 0;
+  margin-bottom: 30px;
+  border-radius: 6px;
+  color: rgba(0, 0, 0, 0.87);
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+} */
+
+.card.card-carousel img {
+  border-radius: 6px;
+}
+
+
+.carousel-inner {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.landing-carousel {
+  margin-bottom: 0;
+}
+.landing-carousel .active {
+  border-left: none;
+  color: #fff;
+  border-radius: 0;
+}
+.landing-carousel .carousel-indicators li {
+  background-color: rgba(40, 181, 244, 1);
+  width: 50px;
+  height: 6px;
+}
+.landing-carousel .scroll-btn {
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  z-index: 10;
+}
+
+.landing-carousel .scroll-btn .btn {
+  color: rgba(40, 181, 244, 1);
+  font-size: 3rem;
+}
+
+.landing-carousel .carousel-indicators {
+  right: 0;
+  left: 10px;
+  margin: 0 !important;
+  justify-content: flex-start;
+}
+
+.carousel-item {
+  position: relative;
+  display: none;
+  align-items: center;
+  width: 100% !important;
+  transition: transform 0.6s ease;
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+
+.carousel-item.active {
+  display: block;
+}
+
+.carousel .carousel-caption {
+  padding-bottom: 45px;
+}
+
+.carousel .carousel-caption .material-icons {
+  position: relative;
+  top: 5px;
+}
+
+.carousel .carousel-control-next .material-icons {
+  z-index: 5;
+  display: inline-block;
+  font-size: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 50px;
+  margin: auto;
+}
+
+.carousel .carousel-control-prev .material-icons {
+  z-index: 5;
+  display: inline-block;
+  font-size: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 50px;
+  margin: auto;
+}
+.footer p {
+  margin-bottom: 0;
+}
+footer p a {
+  color: #555;
+  font-weight: 400;
+}
+
+footer p a:hover {
+  color: #9f26aa;
+  text-decoration: none;
+}
+
 body::-webkit-scrollbar {
   width: 1em;
 }
@@ -33,12 +181,26 @@ body::-webkit-scrollbar-thumb {
 .profilepic {
   margin-left: 18%;
 }
-.pfont {
-  margin-top: 18%;
-  color: #616161;
-  font-size: 2.1rem;
-  font-family: "RobotoBold";
+
+.bottom-banner img{
+  height: 200px;
 }
+
+.landing-footer{
+  background-color: #28b5f4;
+}
+
+.community-side-info .pfont {
+  color: #616161;
+  font-size: 5vw;
+  font-family: "MontserratExtraBold";
+}
+
+.community-side-info p {
+  font-size: 3vh;
+  font-family: "RobotoRegular";
+}
+
 .landingMain h4 {
   padding: 2.5vw 0 0;
   margin: 0;
@@ -68,6 +230,9 @@ body::-webkit-scrollbar-thumb {
 @media only screen and (max-width: 600px) {
   .navbar-badge {
     top: 3px;
+  }
+  .landing-carousel .scroll-btn {
+    left: 40%;
   }
 }
 @media only screen and (max-width: 600px) {
