--- a/pages/changePassword/changePassword.css
+++ b/pages/changePassword/changePassword.css
@@ -20,7 +20,7 @@
   border-radius: 20px;
   margin-top: 15%;
   padding: 2rem;
-  box-shadow: 0 16px 24px rgb(0 0 0 / 16%);
+  box-shadow: 0 16px 24px rgba(0 ,0 ,0,0.16);
 }
 
 .contact-textarea {
