--- a/pages/portfolioimage/portfolioimage.css
+++ b/pages/portfolioimage/portfolioimage.css
@@ -18,15 +18,80 @@
   src: url(../../fonts/Roboto-Medium.woff);
 }
 
-.back-button {
-  text-align: center;
+.upload-profile-carsousel .carousel-control-btn {
+  top: 50% !important;
+  bottom: 50% !important;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0;
+  background-color: #28b5f4;
+  width: 50px !important;
+  height: 50px;
+  border-radius: 50%;
 }
 
-.carousel-item img {
+.upload-profile-carsousel .carousel-control-prev {
+  left: 20px;
+}
+
+.upload-profile-carsousel .carousel-control-next {
+  right: -28px !important;
+}
+
+.upload-profile-carsousel .active {
+  border-left: 0px;
+}
+
+.upload-profile-carsousel .carousel-indicators {
+  margin: 10px 0 0;
+  overflow: auto;
+  position: static;
+  text-align: left;
+  white-space: nowrap;
   width: 100%;
-  height: 43vw;
+}
+.upload-profile-carsousel .carousel-indicators li {
+  background-color: transparent;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  display: inline-block;
+  height: auto;
+  margin: 0 !important;
+  width: auto;
+}
+.upload-profile-carsousel .carousel-indicators li img {
+  display: block;
+  opacity: 0.5;
+  height: 5rem;
+}
+.upload-profile-carsousel .carousel-indicators li.active img {
+  opacity: 1;
+}
+.upload-profile-carsousel .carousel-indicators li:hover img {
+  opacity: 0.75;
+}
+.upload-profile-carsousel .carousel-outer {
+  position: relative;
+}
+.upload-profile-carsousel .carousel-inner .active {
+  background: black;
+}
+.upload-profile-carsousel .carousel-inner .profile-frame {
+  min-height: 26rem;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.upload-profile-carsousel .carousel-inner .profile-frame.uploaded-data {
   object-fit: contain;
-  background-color: #616161;
+  background: lightgray;
+  width: inherit;
+}
+
+.back-button {
+  text-align: center;
 }
 
 .image-canvas {
@@ -34,10 +99,10 @@
 }
 .zoom-icon {
   position: absolute;
-  z-index: 65;
-  right: 17px;
+  z-index: 1;
+  right: 5px;
   cursor: pointer;
-  top: 25px;
+  top: 2px;
 }
 
 .carousel-control-btn {
