--- a/pages/portfolioUploadWork/portfolioUploadWork.css
+++ b/pages/portfolioUploadWork/portfolioUploadWork.css
@@ -7,17 +7,100 @@
   src: url(../../fonts/Roboto-Bold.woff);
 }
 
+.upload-profile-carsousel .carousel-control-btn {
+  top: 50% !important;
+  bottom: 50% !important;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0;
+  background-color: #28b5f4;
+  width: 50px !important;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.upload-profile-carsousel .carousel-control-prev {
+  left: 20px;
+}
+
+.upload-profile-carsousel .carousel-control-next {
+  right: -20px;
+}
+
+.upload-profile-carsousel .active {
+  border-left: 0px;
+}
+
+.upload-profile-carsousel .carousel-indicators {
+  margin: 10px 0 0;
+  overflow: auto;
+  position: static;
+  text-align: left;
+  white-space: nowrap;
+  width: 100%;
+}
+.upload-profile-carsousel .carousel-indicators li {
+  background-color: transparent;
+  -webkit-border-radius: 0;
+  border-radius: 0;
+  display: inline-block;
+  height: auto;
+  margin: 0 !important;
+  width: auto;
+}
+.upload-profile-carsousel .carousel-indicators li img {
+  display: block;
+  opacity: 0.5;
+  height: 5rem;
+}
+.upload-profile-carsousel .carousel-indicators li.active img {
+  opacity: 1;
+}
+.upload-profile-carsousel .carousel-indicators li:hover img {
+  opacity: 0.75;
+}
+.upload-profile-carsousel .carousel-outer {
+  position: relative;
+}
+.upload-profile-carsousel .carousel-inner .active {
+  background: black;
+}
+.upload-profile-carsousel .carousel-inner .upload-frame {
+  min-height: 26rem;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.upload-profile-carsousel .carousel-inner .upload-frame .uploaded-data {
+  object-fit: contain;
+  background: lightgray;
+  width: inherit;
+}
+
 .maincontentRow .back-icon {
   font-size: 1.5rem;
 }
- .upload-frame {
+
+.upload-type {
+  border: 1px solid #28b5f4;
+  cursor: pointer;
+}
+
+.upload-type > input {
+  display: none;
+}
+
+/* .upload-frame {
   min-height: 26rem;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #efefef;
-}
+} */
+
 .upload-icon {
   background-image: url(../../images/uploadIcon.png);
   width: 7.5rem;
@@ -94,7 +177,8 @@ h1 {
   height: 100%;
   opacity: 0;
 }
-.uploadfrm .card-body label, .upload-section label {
+.uploadfrm .card-body label,
+.upload-section label {
   color: #616161;
   font-family: "RobotoRegular" !important;
   font-weight: 200;
@@ -125,7 +209,7 @@ h1 {
   background-color: green;
 }
 
-.cropImage{
+.cropImage {
   min-height: 26rem;
   width: 100%;
   display: flex;
@@ -160,7 +244,7 @@ h1 {
   color: #fff;
 }
 .file_upload {
-  opacity: 0.0;
+  opacity: 0;
 
   /* IE 8 */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
@@ -169,10 +253,10 @@ h1 {
   filter: alpha(opacity=0);
 
   /* Netscape or and older firefox browsers */
-  -moz-opacity: 0.0;
+  -moz-opacity: 0;
 
   /* older Safari browsers */
-  -khtml-opacity: 0.0;
+  -khtml-opacity: 0;
 
   position: absolute;
   top: 0;
@@ -180,7 +264,7 @@ h1 {
   bottom: 0;
   right: 0;
   width: 100%;
-  height:100%;
+  height: 100%;
 }
 
 /* 
@@ -189,5 +273,3 @@ h1 {
     max-width: 540px;
   }
 } */
-
-
